fix: wrap title and languages in ProjectModal

--- a/components/Modal/ProjectModal/ProjectModal.module.scss
+++ b/components/Modal/ProjectModal/ProjectModal.module.scss
@@ -29,6 +29,7 @@
 	display: flex;
 	align-items: center;
 	gap: 1.5rem;
+	flex-wrap: wrap;
 }
 
 .modalHeader {
